*** CHANGELOG ***

2019-05-13
Window will now maximize on startup image load if image size is larger than screen size
Change C++ standard from C++11 to C++98
Remove -Wpedantic compile flag
Change WXImage::w, h from unsigned int to int
Temporary workaround for crash when loading image with alpha channel

2019-05-12
Add DBG (set debug flags), CBG_CMP (debug compilation), OPT (optimization levels) switches to makefile
Set initial / on image load window size and position
Show file pathname in title bar
Add RMB -> pan window
Fix on load window size setting total window size, not client size
Add LMB double click -> toggle maximized
Fix window being draggable when maximized

2019-05-11
Move GLUT code to GLUTWindow.cpp (TODO : refactor / shim api appropriately)
Add class WXWindow : public IWindow, public wxFrame
Link wxWidgets
Add class WXCanvas : public wxGLCanvas
Link wxGL
Add interface IImage
Add class WXImage : public IImage
Prototype wxWidgets backend (supports basic features, load image with default image handlers (bmp, jpg, png, tiff?), display image in previously prototyped GLView logic, pan / zoom with previous prototype logic)

2019-04-26
Change pan window button to LMB
Change pan view button to RMB
Add panic esc for testing
Add enter regular exit
Revert pan window button to RMB
Revert pan view button to RMB

2019-04-25
Add include header stb_image.h
Add test OpenGL rendering
Add mwheel zoom
Add LMB pan
Add aspect ratio correct scaling
Add zoom around view zenter
Set pan speed relative to zoom
Fix pan instability
Now opens file given in argv[1] (for testing)
If no input file specified, opens a default file
Fixed CPU hogging
Set size to loaded image on startup
Add RMB pan window

2019-04-24
Compile freeglut 3.0.0 Linux binaries
Compiles on Linux (64-bit)
Rename main.c → Main.c
Rename main.h → Main.h
Switch to C++ (C++11)
Rename Main.c → Main.cpp
Add CHANGELOG
Add README.md
Add Netbeans 8.2 project
Remove CodeBlocks project
Add src/AWindow.cpp, src/AWindow.h