@@ -1542,7 +1542,6 @@
     <df root="src" name="1">
       <in>GLUTWindow.cpp</in>
       <in>GLUTWindow.h</in>
-      <in>IImage.h</in>
       <in>IWindow.h</in>
       <in>Main.cpp</in>
       <in>Main.h</in>
@@ -1593,8 +1592,9 @@
         <runcommandpicklist>
           <runcommandpicklistitem>"${OUTPUT_PATH}"</runcommandpicklistitem>
           <runcommandpicklistitem>"${OUTPUT_PATH}" test/b-panel.png</runcommandpicklistitem>
+          <runcommandpicklistitem>"${OUTPUT_PATH}" C:\Users\Jester\Documents\SVN\Github\JFVGL\JFVGL\test\b-panel.png</runcommandpicklistitem>
         </runcommandpicklist>
-        <runcommand>"${OUTPUT_PATH}" test/b-panel.png</runcommand>
+        <runcommand>"${OUTPUT_PATH}" C:\Users\Jester\Documents\SVN\Github\JFVGL\JFVGL\test\b-panel.png</runcommand>
         <rundir>.</rundir>
         <buildfirst>true</buildfirst>
         <console-type>1</console-type>
